<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoteActivity">

  <TextView
      android:id="@+id/voxChoiceTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="cursive"
      android:text="VoxChoice"
      android:textColor="#000000"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.084" />

  <TextView
      android:id="@+id/pollTitleTextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="44dp"
      android:text="Poll Title"
      android:textSize="34sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/voxChoiceTitle" />

  <TextView
      android:id="@+id/questionTextView"
      android:layout_width="375dp"
      android:layout_height="75dp"
      android:layout_marginTop="36dp"
      android:text="Question"
      android:textAlignment="center"
      android:textAllCaps="false"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pollTitleTextView" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/dashboardItemRecyclerView"
      android:layout_width="375dp"
      android:layout_height="400dp"
      android:background="@drawable/rounded_background"
      android:padding="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/questionTextView"
      app:layout_constraintVertical_bias="0.253" />

</androidx.constraintlayout.widget.ConstraintLayout>